// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard component should render correctly default 1`] = `
<Modal
  actions={
    Array [
      <Button
        action="next"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Next
      </Button>,
      false,
      <Button
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-wizard"
  content={
    Array [
      <div
        id="first"
      >
        First
      </div>,
      <div
        id="second"
      >
        Second
      </div>,
      <div
        id="third"
      >
        Third
      </div>,
      <div
        id="fourth"
      >
        Fourth
      </div>,
    ]
  }
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  onKeyPress={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Some title"
  variant="large"
>
  <div
    id="first"
    key="first"
  >
    First
  </div>
</Modal>
`;

exports[`Wizard component should render correctly large 1`] = `
<Modal
  actions={
    Array [
      <Button
        action="next"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Next
      </Button>,
      false,
      <Button
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-wizard"
  content={
    Array [
      <div
        id="first"
      >
        First
      </div>,
      <div
        id="second"
      >
        Second
      </div>,
      <div
        id="third"
      >
        Third
      </div>,
      <div
        id="fourth"
      >
        Fourth
      </div>,
    ]
  }
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  onKeyPress={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Some title"
  variant="large"
>
  <div
    id="first"
    key="first"
  >
    First
  </div>
</Modal>
`;

exports[`Wizard component should render correctly one page 1`] = `
<Modal
  actions={
    Array [
      <Button
        action="confirm"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Confirm
      </Button>,
      false,
      <Button
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-wizard"
  content={
    Array [
      <div>
        One
      </div>,
    ]
  }
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  onKeyPress={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Some title"
  variant="large"
>
  <div
    key="one"
  >
    One
  </div>
</Modal>
`;
